source-sass/app.scss
// =======================================
// Custom Variables
// =======================================

$dark-blue: #161f29;
$dirty-blue: #7fa5c1;

$yellow: #ffbf42;
$light-orange: #ff9b58;
$juicy-orange: #ff4e15;

$grey: #65768a;
$off-white: #c2d2de;

$header-font: Anton, Impact, "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;


// =======================================
// Foundation
// =======================================

@import "settings";
@import "source/bower_components/foundation/scss/normalize.scss";
@import "source/bower_components/foundation/scss/foundation.scss";

// =======================================
// Import stylesheets
// =======================================
@import "pace";
@import "animate";
@import "journey";
@import "elements";


// =======================================
// Globals
// =======================================

body {
  text-rendering: optimizeLegibility;

  * {
    box-sizing: border-box;
  }
}

// Reset

ul,
ol {
  margin-left: 0;
  list-style-position: inside;
}

// Vertical spacing etc

section {
  position: relative;
  padding: 1.25rem 0;

  &:after {
    content: '';
    display: block;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;
  }

  @media #{$medium-up} {
    min-height: 100%;
    padding: 3rem 0;
  }

  @media #{$large-up} {
    padding: 6rem 0;
  }
}

section:not(.cascadia-journey),
footer {
  background: $dark-blue;
  position: relative;
  z-index: 1501;
}


// =======================================
// Typography
// =======================================

h1 {
  position: relative;
  left: -2px;
  font-size: 2.5em;
  font-family: $header-font;
  text-transform: uppercase;
  line-height: 1;
  color: #fff;

  @media #{$medium-up} {
    font-size: 4.25em;
  }

  @media #{$medium-up} {
    font-size: 5.25em;
  }

  small {
    display: block;
    margin: 1rem 0 0.75rem;
    font-family: $body-font-family;
    text-transform: none;
    font-size: 1.125rem;
    line-height: 1.3;
    color: #8c949e;

    @media #{$medium-up} {
      font-size: 1.375rem;
    }

    @media #{$large-up} {
      font-size: 1.6125rem;
    }

    strong {
      font-weight: normal;
      color: #fff;
    }

    &.subtitle {
      position: relative;
      left: 5px;
      margin-bottom: 0.25rem;
      font-size: 1rem;
      font-family: $header-font;
      text-transform: uppercase;
      letter-spacing: 6px;
      font-weight: normal;

      @media #{$medium-up} {
        font-size: 1.125rem;
      }

      @media #{$medium-up} {
        font-size: 1.25rem;
      }
    }

    &.subtitle--bottom {
      margin-top: 0.25rem;
    }
  }
}

h2 {
  font-weight: 500;
  font-size: 1.5em;
  line-height: 1.3;

  @media #{$medium-up} {
    font-size: 2.25em;
  }

  @media #{$large-up} {
    font-size: 2.875em;
  }
}

h3 {
  font-weight: 500;
  font-size: 1.35em;
  line-height: 1.3;

  @media #{$medium-up} {
    font-size: 1.875em;
  }

  @media #{$large-up} {
    font-size: 2.275em;
  }
}

p,
li {
  font-size: 1rem;
  line-height: 1.3;
  color: #8c949e;


  @media #{$medium-up} {
    font-size: 1.275rem;
    margin-bottom: 1rem;

  }

  @media #{$large-up} {
    margin-bottom: 1.25rem;
    font-size: 1.375rem;
  }
}

h4 {
  color: #8c949e;
}

strong,
bold {
  font-weight: normal;
  color: #fff;
}


// =======================================
// Links and buttons
// =======================================

// TODO: style buttons
.button {
  background: none;
  color: $juicy-orange;
  border: 2px solid $juicy-orange;
  border-radius: 5px;
  outline: 0;
  animation: blink 2s infinte ease-out;
  font-family: $header-font;
  text-transform: uppercase;
  letter-spacing: 1px;

  &:hover {
    color: #fff;
    background: $juicy-orange;
  }

  &:focus,
  &:active {
    outline: 0;
  }
}


// =======================================
// Header
// =======================================

// Logos

.title-logo,
.credit-logo {
  position: relative;
  z-index: 1510;
}

.title-logo {
  display: block;
  width: 100px;
  margin: 0 auto;
  text-align: center;

  @media #{$medium-up} {
    width: 140px;
    margin-top: -2rem;
  }

  @media #{$large-up} {
    width: 160px;
    margin-top: -4rem;
  }

  object {
    width: 100%;
  }
}

.credit-logo {
  position: absolute;
  width: 150px;
  opacity: 0.25;
}

  .credit-logo--left {
    width: 175px;
    top: 3.15rem;
    left: 3rem;
  }

  .credit-logo--right {
    top: 2.3rem;
    right: 3rem;
  }


// =======================================
// Landing / Hero
// =======================================

.hero {
  z-index: 1501;
  min-height: 100%;
  height: 100%;
  background: $dark-blue;
  text-align: center;

  .seismic-wave {
    position: absolute;
    top: 75px;
    right: 0;
    left: 0;
    z-index: 1502;
    margin: 0 auto;
    width: 100%;
  }

  .row {
    position: relative;
    z-index: 1503;
  }

  @media #{$medium-up} {
    height: 100%;
  }

  h1 {
    margin-top: 35%;
    margin-bottom: 5vh;
    line-height: 1;
    color: #fff;
    text-shadow: 0 0 15px rgba($dark-blue, 0.75);

    @media #{$medium-up} {
      margin-top: 18%;
      margin-bottom: 3vh;
    }

    @media #{$large-up} {
      margin-top: 24vh;
    }
  }

  h2 {
    margin-top: 2rem;
    color: #fff;

    @media #{$medium-up} {
      margin-top: 4.5rem;
    }

    @media #{$large-up} {
      margin-top: 7rem;
    }
  }

  h3 {
    color: rgba(255, 255, 255, 0.5);
    font-weight: 300;

    @media #{$medium-up} {
      margin-top: 0.75rem;
    }

    @media #{$large-up} {
      margin-top: 1.5rem;
    }
  }

  p {
    margin-top: 1.25rem;
    margin-bottom: 2.5rem;
    color: #777;

    img {
      display: inline-block;
      opacity: 0.3;
    }
  }
}


// =======================================
// Meet Cascadia
// =======================================

.subduction {
  position: relative;
  z-index: 1501;
  text-align: center;
  background: $dark-blue;
  padding-top: 0 !important;

  img {
    width: 90%;
    max-width: 600px;
    margin: 0 auto;

    @media #{$large-up} {
      width: 100%;
      max-width: 100%;
    }
  }

  &:after {
    display: none;
  }
}


// =======================================
// Prediction
// =======================================

.prediction {

  h1 {
    overflow: hidden;
  }

  .circle-container {
    margin: 1.25rem auto 0.6125rem;
  }

  object {
    margin-bottom: 0.6125rem;

    @media #{$medium-up} {
      margin-bottom: 1.25rem;
    }
  }
}

.prediction--chance {
  padding-top: 0;
}

.prediction--scenario {
  padding-top: 0;

  ul {
    margin-bottom: 5vw;

    @media #{$medium-up} {
      margin-bottom: 10vw;
    }
  }
}

.subduction,
.prediction {

  h1 {
    margin-bottom: 2.5vh;

    @media #{$medium-up} {
      margin-bottom: 5vh;
    }
  }
}


// =======================================
// Japan
// =======================================

.japan {
  position: relative;
  padding-bottom: 0;

  h1 {
    position: relative;
    margin: 0 auto 1.5rem;

    @media #{$medium-up} {
      margin: 3.5rem auto 2rem;

      // Blinking red halo
      &:before {
        content: '';
        display: block;
        width: 120px;
        height: 120px;
        margin: 0 auto;
        border-radius: 50%;
        background: rgba(red, 0.25);
        box-shadow: 0 0 0 20px rgba(red, 0.25);
        animation: blinkAlt 1.5s infinite ease-out;
        position: absolute;
        top: -175px;
        left: 0;
        right: 0;
      }

      // Pusling red dot
      &:after {
        content: '';
        display: block;
        width: 120px;
        height: 120px;
        margin: 0 auto;
        border-radius: 50%;
        background: red;
        animation: heartbeat 1.5s infinite ease-out;
        position: absolute;
        top: -175px;
        left: 0;
        right: 0;
      }
    }

    @media #{$large-up} {
      margin: 8rem auto 4rem;
    }
  }

  p {
    margin-bottom: 1.5rem;
  }

  @media #{$small-only} {

    img {
      width: 100%;
      max-width: 300px;
      margin: 0 auto 2rem;
    }
  }
}

// Japan photos
.japan__polaroids {

  @media #{$medium-up} {
    width: 100%;
    max-width: 100%;
    position: relative;
    left: -125px;
  }

  a {
    background: #fff;
    display: inline-block;
    float: left;
    width: auto;
    margin: 0 0 0 10px;
    padding: 5px 5px 20px;
    border-radius: 1px;
    text-align: center;
    text-decoration: none;
    color: #333;
    font-size: 18px;
    box-shadow: 0 3px 6px rgba($dirty-blue, 0.5);
    position: relative;
    z-index: 1;

    @media #{$medium-up} {
      margin: 0 0 0 30px;
      padding: 15px 15px 55px;
    }

    // Scatter the polaroids around
    &:first-of-type {
      top: -100px;
      left: 160px;
      transform: rotate(1deg);
    }

    &:nth-of-type(2) {
      top: -80px;
      left: 145px;
      transform: rotate(-2deg);
    }

    &:last-of-type {
      top: -60px;
      left: 175px;
      transform: rotate(-1deg);
    }
  }
}


// TODO: Refactor

.preparedness {
  text-align: center;

  .row {
    position: relative;
    z-index: 1505;
  }

  h1 {
    margin-bottom: 1.25rem;
  }
}

.at-risk {
  padding: 10vh 0 5vh;
}

.area-safe,
.area-affected {
  width: 110px;
  margin-top: 1rem;
}

.alert-box--safe,
.alert-box--danger {
  // background: rgba(255, 255, 255, 0.05);
  border-radius: 5px;
  margin-top: 5rem;

  p {
    color: #fff;
  }
}

.at-risk__cta {
  padding: 8rem 0;
  background-image: url(/media/trbo-CTA-bg.svg);
  background-repeat: no-repeat;
  background-size: 95%;
  background-position: center center;
}

.button--risk {
  margin-top: 1.5rem;
  background: $dark-blue;
  box-shadow: 0 0 26px 5px $dark-blue;
}

.button--twitter,
.button--facebook,
.button--email {
  font-size: 1.25rem;
  width: 100%;
  transition: all 0.2s ease-in;

  @media #{$medium-only} {
    font-size: 1rem;
    padding: 1rem 0.5rem;
  }

  @media #{$large-up} {
    font-size: 1.8rem;
  }

  object {
    width: 25px;
    height: 25px;
    margin-bottom: -0.25rem;
    margin-right: 0.5rem;

    @media #{$medium-only} {
      width: 18px;
      height: 18px;
      margin-bottom: -0.125rem;
      margin-right: 0.125rem;
    }

    @media #{$large-up} {
      width: 40px;
      height: 40px;
      margin-bottom: -0.5rem;
    }
  }

  &:hover {
    box-shadow: inset 0 0 7px 4px rgba(255, 255, 255, 0.05);
  }
}

.button--twitter {
  border-color: #55acee;
  color: #fff;
  background-color: #55acee;
  box-shadow: inset 0 0 7px 4px rgba(22, 31, 41, 0.3);

  &:hover {
    background-color: #55acee;
    color: #fff;
  }
}

.button--facebook {
  border-color: #3b5998;
  color: #fff;
  background-color: #3b5998;
  box-shadow: inset 0 0 7px 4px rgba(22, 31, 41, 0.3);

    &:hover {
      background-color: #3b5998;
      color: #fff;
    }
}

.button--email {
  color: #621800;
  background-color: $primary-color;
  box-shadow: inset 0 0 7px 4px rgba(22, 31, 41, 0.3);

  &:hover {
    color: #621800;
  }
}

